update: finished demo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=spring-mvc-security-demo
+
+# Database
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
+
+# Log JDBC SQL statements (only use it in development environment)
+# Note: This is not recommended for production environment (it will log usernames)
+logging.level.org.springframework.jdbc.core=TRACE
